# Keepr

./: .dockerignore  .env.example  .gitignore  .mcp.README.md  .mcp.example.json  .npmrc  .prettierignore  .railway-cache-bust  .vercelignore  AGENTS.md  AI_SETUP_NEXT_STEPS.md  AUDIT-2024-12-28.md  AUDIT-QUICK-REVIEW.md  AUTONOMOUS_TASKS.md  AUTONOMOUS_TASKS_UX.md  AUTONOMOUS_TASKS_V2.md  BUSINESS_PLAN.md  CLAUDE.md  DYNAMIC-IMPORTS-SUMMARY.md  Dockerfile  Dockerfile.api  Dockerfile.web  GAMIFICATION_ARCHITECTURE.md  GAMIFICATION_FLOW_DIAGRAM.md  GAMIFICATION_STATUS.md  HELP_TOOLTIPS_SUMMARY.md  LOCK_CODES_IMPLEMENTATION_GUIDE.md  PHASES.md  QUESTIONS.md  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  SECURITY-AUDIT-FINDINGS.md  SECURITY-FIX-ADMIN-CONTROLLERS.md  SECURITY-FIXES-SUMMARY.md  SECURITY-XSS-AUDIT-COMPLETE.md  SECURITY_AUDIT_LOCK_CODES.md  SECURITY_FIX_SUMMARY.md  STUBBED_DATA_AUDIT.md  TASK.md  (+19 more)
.agent/workflows/: tickets.md
.changeset/: README.md  config.json
.claude/agents/: api-reviewer.md  code-reviewer.md  daniel-stenberg.md  debugger.md  dense-data-ui.md  dhh.md  kelsey-hightower.md  kent-beck.md  linus-torvalds.md  martin-fowler.md  million-dollar-builder.md  money-models.md  offers-engineer.md  richard-hipp.md  security-reviewer.md  tavis-ormandy.md  thomas-ptacek.md  ui-reviewer.md
.claude/commands/: audit-api.md  cloudflare.md  db.md  test.md
.claude/rules/: api.md  payments.md  rust.md
.claude/skills/: railway-deploy.md
.codex/commands/: dev.md  lint.md  openapi.md  quick-check.md  seed.md
.github/workflows/: ci.yml
agents/: README.md
api/: index.js
codex/: MIGRATION_NOTES.md
codex/agents/: andrej-karpathy.md  antirez.md  api-reviewer.md  code-reviewer.md  daniel-stenberg.md  debugger.md  dense-data-ui.md  dhh.md  emotional-design-reviewer.md  fabrice-bellard.md  john-carmack.md  kelsey-hightower.md  kent-beck.md  linus-torvalds.md  martin-fowler.md  million-dollar-builder.md  money-models.md  offers-engineer.md  performance-reviewer.md  rich-hickey.md  richard-hipp.md  sandi-metz.md  security-reviewer.md  tavis-ormandy.md  thomas-ptacek.md  ui-reviewer.md  ux-reviewer.md
crash files/: logs.1765593002221.json  logs.1765593439731.json  logs.1765594771101.json  logs.1765595618170.json  logs.1765595955080.json  logs.1765596019637.json  logs.1765596371612.json  logs.1765599710389.json  logs.1765599856788.json  logs.1765600413593.json  logs.1765600902872.json  logs.1765601030893.json  logs.1765601610891.json  logs.1765722182713.json  logs.1765971236164.json  logs.1765988151959.json  logs.1766152155880.json  logs.1766182874817.json  logs.1766191440177.json  logs.1766192487492.json  logs.1766319491406.json  logs.1766335896990.json  logs.1766450212764.json
docs/: AGENTS.md  AI_FIRST_DEVELOPMENT.md  BETA_EXIT_CHECKLIST.md  BOOKING-UX-TODO.md  BUSINESS_PLAN.md  BUSINESS_SETUP.md  CENTRAL_SETTINGS_COMPONENTS.md  CENTRAL_SETTINGS_DESIGN_SPEC.md  CENTRAL_SETTINGS_PLAN.md  CLAY_ICON_PROMPTS.md  DASHBOARD_AUDIT_PROMPT.md  DASHBOARD_AUDIT_RESULTS.md  DESIGN_AUDIT_TODO.md  DEVELOPER_WORKFLOW.md  DOMAIN-SETUP-NOTES.md  HOTEL_OPERATIONS_EXPANSION_ANALYSIS.md  KNOWN_LIMITATIONS.md  OPENAI_INTEGRATION.md  PRE-LAUNCH-CHECKLIST.md  QUICK-ADD-UPDATE.md  RAILWAY_BACKUP_SETUP.md  RAILWAY_EXPERT_GUIDE.md  RAILWAY_TROUBLESHOOTING.md  REPORT_INVENTORY.md  RUST_MIGRATION_PLAN.md  access-scoping.md  ai-suggestions-enhancement.md  architecture.mmd  audit-core-functions.md  blackouts-rollout.md  blog-generation-prompt.md  calendar-booking-ux-audit.md  changesets.md  chat-widget-upgrade-todo.md  chat-widget-ux-rules.md  cloudbeds-competitive-analysis.md  cloudbeds-parity-audit.md  cloudbeds-product-updates-audit.md  compliance-runbook.md  dr-readiness.md  (+45 more)
docs/marketing/: reddit-playbook.md  (+4 more)
platform/: CHANGELOG.md  PR_DESCRIPTION.md
platform/services/auth-service-rs/: Cargo.toml  Dockerfile
platform/services/auth-service-rs/src/: main.rs
platform/services/availability-rs/: Cargo.toml  Dockerfile
platform/services/availability-rs/src/: main.rs
platform/services/payment-processor-rs/: Cargo.toml  Dockerfile
platform/services/payment-processor-rs/src/: main.rs
scripts/: add-express-request-import.js  agent-task.sh  backfill-ridb-locations.js  generate-prisma-enums.js  link-prisma-client.js  smoke.js
(+2280 files in other folders)
