[package]
name = "payment_processor"
version = "0.1.0"
edition = "2021"
authors = ["Campreserv Team"]
description = "Rust payment processing service for Campreserv"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for Stripe API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Environment variables
dotenvy = "0.15"

# Cryptography (for webhook verification)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
tracing-opentelemetry = "0.25"
opentelemetry = { version = "0.24", features = ["trace"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["http-proto", "reqwest-client"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
actix-rt = "2"
mockall = "0.13"

[profile.release]
lto = true
codegen-units = 1
strip = true
